{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 41,
  "lineage": "c042975a-aed9-a7b2-9373-42e03701142e",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_a_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-065cd35eb31a1b15c",
            "arn": "arn:aws:ec2:eu-west-1:442827105544:elastic-ip/eipalloc-065cd35eb31a1b15c",
            "association_id": "eipassoc-042a7d6de2396e6ce",
            "domain": "vpc",
            "id": "eipalloc-065cd35eb31a1b15c",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0e4814e9f707a4cd1",
            "private_dns": "ip-10-0-1-120.eu-west-1.compute.internal",
            "private_ip": "10.0.1.120",
            "public_dns": "ec2-3-248-27-7.eu-west-1.compute.amazonaws.com",
            "public_ip": "3.248.27.7",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "azoz-nat-a-eip"
            },
            "tags_all": {
              "Name": "azoz-nat-a-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_b_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-093445ffec5e00d27",
            "arn": "arn:aws:ec2:eu-west-1:442827105544:elastic-ip/eipalloc-093445ffec5e00d27",
            "association_id": "eipassoc-09577bb3580d2910f",
            "domain": "vpc",
            "id": "eipalloc-093445ffec5e00d27",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-05a905e1112a70077",
            "private_dns": "ip-10-0-2-79.eu-west-1.compute.internal",
            "private_ip": "10.0.2.79",
            "public_dns": "ec2-54-247-54-96.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.247.54.96",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "azoz-nat-b-eip"
            },
            "tags_all": {
              "Name": "azoz-nat-b-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:442827105544:internet-gateway/igw-06bd476927a922725",
            "id": "igw-06bd476927a922725",
            "owner_id": "442827105544",
            "tags": {
              "Name": "azoz-igw"
            },
            "tags_all": {
              "Name": "azoz-igw"
            },
            "vpc_id": "vpc-01cfab9bf04de50a8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-065cd35eb31a1b15c",
            "association_id": "eipassoc-042a7d6de2396e6ce",
            "connectivity_type": "public",
            "id": "nat-0ede686d01859d667",
            "network_interface_id": "eni-0e4814e9f707a4cd1",
            "private_ip": "10.0.1.120",
            "public_ip": "3.248.27.7",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05a02ab7dd31b11e8",
            "tags": {
              "Name": "azoz-nat-a"
            },
            "tags_all": {
              "Name": "azoz-nat-a"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_a_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_1",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-093445ffec5e00d27",
            "association_id": "eipassoc-09577bb3580d2910f",
            "connectivity_type": "public",
            "id": "nat-06c1cbf15ba93ca5a",
            "network_interface_id": "eni-05a905e1112a70077",
            "private_ip": "10.0.2.79",
            "public_ip": "54.247.54.96",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0779a107d8e87d541",
            "tags": {
              "Name": "azoz-nat-b"
            },
            "tags_all": {
              "Name": "azoz-nat-b"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_b_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_2",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_a_to_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02bfb3cb5993f41d21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ede686d01859d667",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02bfb3cb5993f41d2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_a_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_a",
            "module.vpc.aws_route_table.private_rt_a",
            "module.vpc.aws_subnet.public_1",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_b_to_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01b83376bd9ca8fbe1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06c1cbf15ba93ca5a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01b83376bd9ca8fbe",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_b_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_b",
            "module.vpc.aws_route_table.private_rt_b",
            "module.vpc.aws_subnet.public_2",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06bd476927a922725",
            "id": "r-rtb-0462608e659f839d71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0462608e659f839d7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:442827105544:route-table/rtb-02bfb3cb5993f41d2",
            "id": "rtb-02bfb3cb5993f41d2",
            "owner_id": "442827105544",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ede686d01859d667",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "azoz-private-rt-a"
            },
            "tags_all": {
              "Name": "azoz-private-rt-a"
            },
            "timeouts": null,
            "vpc_id": "vpc-01cfab9bf04de50a8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:442827105544:route-table/rtb-01b83376bd9ca8fbe",
            "id": "rtb-01b83376bd9ca8fbe",
            "owner_id": "442827105544",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06c1cbf15ba93ca5a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "azoz-private-rt-b"
            },
            "tags_all": {
              "Name": "azoz-private-rt-b"
            },
            "timeouts": null,
            "vpc_id": "vpc-01cfab9bf04de50a8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:442827105544:route-table/rtb-0462608e659f839d7",
            "id": "rtb-0462608e659f839d7",
            "owner_id": "442827105544",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06bd476927a922725",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "azoz-public-rt"
            },
            "tags_all": {
              "Name": "azoz-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-01cfab9bf04de50a8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e943ee1c0f4598cf",
            "route_table_id": "rtb-02bfb3cb5993f41d2",
            "subnet_id": "subnet-01b12e6902ec63f14"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private_rt_a",
            "module.vpc.aws_subnet.private_1",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0038432c6e8c0bbef",
            "route_table_id": "rtb-01b83376bd9ca8fbe",
            "subnet_id": "subnet-082d212c23a43bd23"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private_rt_b",
            "module.vpc.aws_subnet.private_2",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b5b9c8f4f26315a",
            "route_table_id": "rtb-0462608e659f839d7",
            "subnet_id": "subnet-05a02ab7dd31b11e8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public_1",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b847eedf244647c",
            "route_table_id": "rtb-0462608e659f839d7",
            "subnet_id": "subnet-0779a107d8e87d541"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public_2",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:442827105544:subnet/subnet-01b12e6902ec63f14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b12e6902ec63f14",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "442827105544",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "azoz-private-1"
            },
            "tags_all": {
              "Name": "azoz-private-1"
            },
            "vpc_id": "vpc-01cfab9bf04de50a8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:442827105544:subnet/subnet-082d212c23a43bd23",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-082d212c23a43bd23",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "442827105544",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "azoz-private-2"
            },
            "tags_all": {
              "Name": "azoz-private-2"
            },
            "vpc_id": "vpc-01cfab9bf04de50a8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:442827105544:subnet/subnet-05a02ab7dd31b11e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a02ab7dd31b11e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "442827105544",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "azoz-public-1"
            },
            "tags_all": {
              "Name": "azoz-public-1"
            },
            "vpc_id": "vpc-01cfab9bf04de50a8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:442827105544:subnet/subnet-0779a107d8e87d541",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0779a107d8e87d541",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "442827105544",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "azoz-public-2"
            },
            "tags_all": {
              "Name": "azoz-public-2"
            },
            "vpc_id": "vpc-01cfab9bf04de50a8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:442827105544:vpc/vpc-01cfab9bf04de50a8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0998b5bf67118b56c",
            "default_route_table_id": "rtb-0c11db13f30c44de8",
            "default_security_group_id": "sg-0f0335b62887b3650",
            "dhcp_options_id": "dopt-0720c367a77304720",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01cfab9bf04de50a8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c11db13f30c44de8",
            "owner_id": "442827105544",
            "tags": {
              "Name": "azoz-vpc"
            },
            "tags_all": {
              "Name": "azoz-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}